// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen enumerators config import-export] should create the enumerators: the enumerators have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ enumerator [Environment/cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen enumerators config import-export] should throw exception when new enumerators to import miss mandatory properties enumerators: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Missing properties:
  - enumerator [Environment/emptyCfgObjectTest]:
    - displayName
    - type
",
  "stdout": "",
}
`;

exports[`[mutagen enumerators config import-export] should update the modified enumerators: the modified enumerators have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ enumerator [Environment/cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen enumerators config import-export] should update the same enumerators: the enumerators have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ enumerator [Environment/cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;
